--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
@@ -9,32 +8,13 @@
     <meta content="" name="author">
     <script src="js/main.js" type="text/javascript"></script>
     <script src="js/handeException.js" type="text/javascript"></script>
-    <title>Warehouse manager</title>
+    <title>Warehouse manager - register form</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
 </head>
-
 <body>
-
-<!-- Navigation -->
-<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">-->
-<!--    <div class="container">-->
-<!--        <a class="navbar-brand" href="#">Biblioteka</a>-->
-<!--        <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"-->
-<!--                class="navbar-toggler"-->
-<!--                data-target="#navbarResponsive" data-toggle="collapse" type="button">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
-<!--        <div class="collapse navbar-collapse" id="navbarResponsive">-->
-<!--            <ul class="navbar-nav ml-auto">-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</nav>-->
-
-<!-- Background Image -->
 <div class="bg-image"
      style="background-image: url('./img/fullhd.jpg');
             height:100vh;
@@ -45,7 +25,7 @@
             <div class="col-lg-12 text-left">
                 <div id="errorMsg">
                 </div>
-<!--                <h1 class="mt-5 text-center" style=" color: antiquewhite">Welcome</h1>-->
+                <!--                <h1 class="mt-5 text-center" style=" color: antiquewhite">Welcome</h1>-->
                 <form>
                     <div class="form-group" style="margin-left: 25%; margin-right: 25%">
                         <style>
@@ -55,34 +35,30 @@
                                 /*border-width: thick !important;*/
                             }
                         </style>
-<!--                        <label for="username">Nazwa użytkownika</label>-->
+                        <!--                        <label for="username">Nazwa użytkownika</label>-->
                         <input class="form-control" id="username" placeholder="Username" type="username">
                     </div>
                     <div class="form-group" style="margin-left: 25%; margin-right: 25%">
-<!--                        <label for="password">Hasło</label>-->
+                        <!--                        <label for="password">Hasło</label>-->
                         <input class="form-control" id="password" placeholder="Password" type="password">
                     </div>
-                    <button class="btn btn-warning" onclick=login() type="submit" style="margin-left: 25%">
+                    <div class="form-group" style="margin-left: 25%; margin-right: 25%">
+                        <!--                        <label for="password">Hasło</label>-->
+                        <input class="form-control" id="mobile" placeholder="Mobile number" type="mobile">
+                    </div>
+                    <div class="form-group" style="margin-left: 25%; margin-right: 25%">
+                        <!--                        <label for="password">Hasło</label>-->
+                        <input class="form-control" id="email" placeholder="E-mail address" type="email">
+                    </div>
+
+                    <button class="btn btn-warning" onclick=register() type="submit" style="margin-left: 25%">
                         Submit
                     </button>
-                    <p  style= "margin-top: -3%; margin-left: 59%; color: white" >Not a member? <a href="register.html" style="font-weight: bold; color: #ffc107">Register</a></p>
-                </form>
-            <ul id="demo"></ul>
+                    <p  style= "margin-top: -3%; margin-left: 55.5%; color: white" >Changed your mind? <a href="index.html" style="font-weight: bold; color: #ffc107">Go back</a></p>
+                    </form>
             </div>
         </div>
     </div>
 </div>
-
-
-<script>
-    showError();
-</script>
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.slim.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
 </body>
-
-
-
 </html>
