--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="author">
     <script src="js/main.js" type="text/javascript"></script>
     <script src="js/handeException.js" type="text/javascript"></script>
-    <title>Warehouse manager</title>
+    <title>Warehouse manager - login site</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -65,7 +65,7 @@
                     <button class="btn btn-warning" onclick=login() type="submit" style="margin-left: 25%">
                         Submit
                     </button>
-                    <p  style= "margin-top: -3%; margin-left: 59%; color: white" >Not a member? <a href="register.html" style="font-weight: bold; color: #ffc107">Register</a></p>
+                    <p  style= "margin-top: -3%; margin-left: 59%; color: white" >Not a member? <a href="warehouseList.html" style="font-weight: bold; color: #ffc107">Register</a></p>
                 </form>
             <ul id="demo"></ul>
             </div>
