front end version 0.1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
                     <button class="btn btn-warning" onclick=login() type="submit" style="margin-left: 25%">
                         Submit
                     </button>
-                    <p  style= "margin-top: -3%; margin-left: 59%; color: white" >Not a member? <a href="warehouseList.html" style="font-weight: bold; color: #ffc107">Register</a></p>
+                    <p  style= "margin-top: -3%; margin-left: 59%; color: white" >Not a member? <a href="register.html" style="font-weight: bold; color: #ffc107">Register</a></p>
                 </form>
             <ul id="demo"></ul>
             </div>
