--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,56 +17,35 @@
 </head>
 
 <body>
-
-<!-- Navigation -->
-<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">-->
-<!--    <div class="container">-->
-<!--        <a class="navbar-brand" href="#">Biblioteka</a>-->
-<!--        <button aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"-->
-<!--                class="navbar-toggler"-->
-<!--                data-target="#navbarResponsive" data-toggle="collapse" type="button">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
-<!--        <div class="collapse navbar-collapse" id="navbarResponsive">-->
-<!--            <ul class="navbar-nav ml-auto">-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</nav>-->
-
-<!-- Background Image -->
 <div class="bg-image"
      style="background-image: url('./img/fullhd.jpg');
             height:100vh;
             background-size: cover">
-    <!-- Page Content -->
     <div class="container h-100">
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-lg-12 text-left">
                 <div id="errorMsg">
                 </div>
-<!--                <h1 class="mt-5 text-center" style=" color: antiquewhite">Welcome</h1>-->
-                <form>
+                <div>
                     <div class="form-group" style="margin-left: 25%; margin-right: 25%">
                         <style>
                             input {
                                 background-color: white !important;
                                 border-color: grey !important;
-                                /*border-width: thick !important;*/
                             }
                         </style>
-<!--                        <label for="username">Nazwa użytkownika</label>-->
-                        <input class="form-control" id="username" placeholder="Username" type="username">
+                        = <input class="form-control" id="username" placeholder="Username" type="username">
                     </div>
                     <div class="form-group" style="margin-left: 25%; margin-right: 25%">
-<!--                        <label for="password">Hasło</label>-->
                         <input class="form-control" id="password" placeholder="Password" type="password">
                     </div>
-                    <button class="btn btn-warning" onclick=login() type="submit" style="margin-left: 25%">
+                    <button class="btn btn-warning" onclick=login() style="margin-left: 25%">
                         Submit
                     </button>
-                    <p  style= "margin-top: -3%; margin-left: 59%; color: white" >Not a member? <a href="register.html" style="font-weight: bold; color: #ffc107">Register</a></p>
-                </form>
+                    <p style="margin-top: -3%; margin-left: 59%; color: white">Not a member? <a href="register.html"
+                                                                                                style="font-weight: bold; color: #ffc107">Register</a>
+                    </p>
+                </div>
             <ul id="demo"></ul>
             </div>
         </div>
@@ -77,10 +56,8 @@
 <script>
     showError();
 </script>
-<!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.slim.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 
