--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
                                 border-color: grey !important;
                             }
                         </style>
-                        = <input class="form-control" id="username" placeholder="Username" type="username">
+                        <input class="form-control" id="username" placeholder="Username" type="username">
                     </div>
                     <div class="form-group" style="margin-left: 25%; margin-right: 25%">
                         <input class="form-control" id="password" placeholder="Password" type="password">
@@ -46,7 +46,7 @@
                                                                                                 style="font-weight: bold; color: #ffc107">Register</a>
                     </p>
                 </div>
-            <ul id="demo"></ul>
+                <ul id="demo"></ul>
             </div>
         </div>
     </div>
@@ -59,7 +59,6 @@
 <script src="vendor/jquery/jquery.slim.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
-
 
 
 </html>
