front end version 0.2

--- a/frontend/warehouseList.html
+++ b/frontend/warehouseList.html
@@ -44,8 +44,8 @@
 </div>
 
 <script>
-    // loadWarehouseList();
-    testowa();
+    loadWarehouseList();
+    // testowa();
     showError();
 </script>
 
