--- a/frontend/storageProductList.html
+++ b/frontend/storageProductList.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
-    <script src="js/warehouseList.js" type="text/javascript"></script>
+    <script src="js/storageProductList.js" type="text/javascript"></script>
     <script src="js/handeException.js" type="text/javascript"></script>
     <title>Warehouse manager - My warehouse list</title>
 
@@ -19,22 +19,11 @@
 <div class="bg-image"
      style="background-image: url('./img/fullhd.jpg');
             height:100vh;
-            background-size: cover;">
-
+            background-size: cover">
     <!-- Page Content -->
     <div class="container h-100">
-        <div class="row h-25 justify-content-between">
-            <div id="buttons" class="col-8">
-            </div>
-            <div class="col-4">
-                <form class="form-inline my-2 my-lg-0 justify-content-end align-items-end">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-warning" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-        <div class="row h-75 justify-content-center align-items-center" style="margin-top: -25%">
-                <div class="col-lg-12 text-left">
+        <div class="row h-100 justify-content-center align-items-center">
+            <div class="col-lg-12 text-left">
 
                 <div id="errorMsg">
                 </div>
@@ -46,17 +35,28 @@
                     </thead>
                     <tbody id="body"></tbody>
                 </table>
-                <button class="btn btn-warning" onclick=logout() type="logout">
-                    Logout
-                </button>
+                <div class="row justify-content-between">
+                    <div class="col-8">
+                        <button class="btn btn-warning" onclick=logout() type="logout">
+                            Logout
+                        </button>
+                    </div>
+                    <div class="col-2 text-right" style="padding-right: 0">
+                        <input id="input" type="text" class="form-control" placeholder="Shelf code">
+                    </div>
+                    <div class="col-2 text-right">
+                        <button class="btn btn-success" onclick=addShelf() type="Add new shelf">
+                            Add new shelf
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
 <script>
-    loadWarehouseList();
-    loadExtraPerms();
+    loadProductList();
     // testowa();
     showError();
 </script>
