--- a/frontend/editShelf.html
+++ b/frontend/editShelf.html
@@ -1,10 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="" name="description">
+    <meta content="" name="author">
+    <script src="js/storageProductList.js" type="text/javascript"></script>
+    <script src="js/editShelf.js" type="text/javascript"></script>
+    <title>Warehouse manager - My warehouse list</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
+    <div class="bg-image"
+     style="background-image: url('./img/fullhd.jpg');
+            height:100vh;
+            background-size: cover">
+        <div class="row h-25">
+            <div class="col-3"></div>
+            <div class="col-4">
+                <button class="btn btn-warning" onclick="logout()"> Logout </button>
+                <button class="btn btn-warning" onclick="location.href='storageProductList.html'"> Go back </button>
+            </div>
+        </div>
+        <div class="row h-25 align-content-end">
+            <div class="col-4 text-right">
+                <div class="col-3" style="margin-left: 76%">
+                <table class="table table-hover table-light text-center">
+                    <thead>
+                        <tr>
+                            <th scope="col"> Shelf Code </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <script>document.write(sessionStorage.getItem('shelfCode'))</script>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                </div>
+            </div>
+            <div class="col-4">
+                <table class="table table-hover table-light text-center" style="table-layout: fixed">
+                    <thead>
+                    <tr>
+                        <th scope="col"> Code </th>
+                        <th scope="col"> Quantity </th>
+                        <th scope="col"> Product Description </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <script>document.write(sessionStorage.getItem('productCode'))</script>
+                        </td>
+                        <td>
+                            <script>document.write(sessionStorage.getItem('productQuantity'))</script>
+                        </td>
+                        <td>
+                            <script>document.write(sessionStorage.getItem('productDescription'));</script>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col4 text-left" style="margin-top: 0.5%; padding-left: 1%">
+                <input id="changeQuantity" type="text" class="form-control" placeholder="Product new quantity">
+                <button class="btn btn-success" onclick=changeQuantity() type="Add new quantity" style="margin-left: 15%; margin-top: 2%">
+                    Add new quantity
+                </button>
+            </div>
+        </div>
+        <div class="row h-50">
+            <div class="col-3 text-right">
+            </div>
+            <div class="col-4">
+                <table class="table table-hover table-light text-center" style="table-layout: fixed">
+                    <thead>
+                    <tr>
+                        <th scope="col"> Adding </th>
+                        <th scope="col"> Code </th>
+                        <th scope="col"> Quantity </th>
+                        <th scope="col"> Product Description </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row"> new product</th>
+                        <td style="padding-top: 1%; padding-bottom: 0">
+                            <input id="newProductCode" type="text" class="form-control">
+                        </td>
+                        <td style="padding-top: 1%; padding-bottom: 0">
+                            <input id="newProductQuantity" type="number" step="0.001" class="form-control">
+                        </td>
+                        <td style="padding-top: 1%; padding-bottom: 0">
+                            <input id="newProductDescription" type="text" class="form-control">
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+                <div>
+                    <div class="btn-group-toggle" data-toggle="buttons">
+                        <label class="btn btn-secondary active" style="margin-top: 5%; background-color: transparent; border: none">
+                            <button type="button" class="btn btn-warning" data-toggle="button" aria-pressed="false" autocomplete="off">
+                                Move old product
+                            </button>
+                            <button type="button" class="btn btn-danger" data-toggle="button" aria-pressed="false" autocomplete="off">
+                                Delete old product
+                            </button>
+                        </label>
+                    </div>
+                    <div class="text-left" style="padding-left: 3.5%">
+                        <input id="newShelfCode" class="col-sm-4" type="text" class="form-control" placeholder="Shelf code" style="margin-left:6%; margin-right: 32%">
+                        <button class="btn btn-success">Submit</button>
+                    </div>
+                </div>
 
+        </div>
+    </div>
 </body>
 </html>
