--- a/frontend/warehouseList.html
+++ b/frontend/warehouseList.html
@@ -39,7 +39,7 @@
                 <div id="errorMsg">
                 </div>
 
-                <h2 class="mt-5 text-center" style="color:whitesmoke; margin-bottom: 50px">My warehouse list</h2>
+<!--                <h2 class="mt-5 text-center" style="color:whitesmoke; margin-bottom: 50px">My warehouse list</h2>-->
                 <table class="table table-hover table-light" style>
                     <thead>
                     <tr id="column"></tr>
