--- a/frontend/whGetStorageLocation.html
+++ b/frontend/whGetStorageLocation.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="" name="description">
+    <meta content="" name="author">
+    <script src="js/whGetStorageLocation.js" type="text/javascript"></script>
+    <script src="js/handeException.js" type="text/javascript"></script>
+    <title>Warehouse manager - My warehouse list</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+
 </head>
 <body>
+<div class="bg-image"
+     style="background-image: url('./img/fullhd.jpg');
+            height:100vh;
+            background-size: cover;">
+
+    <!-- Page Content -->
+    <div class="container h-100">
+        <div class="row h-25 justify-content-between">
+
+            <div class="col-4">
+
+            </div>
+        </div>
+        <div class="row h-75 justify-content-center align-items-center" style="margin-top: -25%">
+            <div class="col-lg-12 text-left">
+
+                <div id="errorMsg">
+                </div>
+
+                <!--                <h2 class="mt-5 text-center" style="color:whitesmoke; margin-bottom: 50px">My warehouse list</h2>-->
+                <table class="table table-hover table-light" style>
+                    <thead>
+                    <tr id="column"></tr>
+                    </thead>
+                    <tbody id="body"></tbody>
+                </table>
+                <button class="btn btn-warning" onclick=logout() type="logout">
+                    Logout
+                </button>
+                <button class="btn btn-warning" onclick="location.href='/warehouseList.html'" style="margin-left: 85.1%;">Go back</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    loadAllWarehouseList();
+    // testowa();
+    showError();
+</script>
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.slim.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
