--- a/frontend/register.html
+++ b/frontend/register.html
@@ -26,7 +26,7 @@
                 <div id="errorMsg">
                 </div>
                 <!--                <h1 class="mt-5 text-center" style=" color: antiquewhite">Welcome</h1>-->
-                <form>
+                <div>
                     <div class="form-group" style="margin-left: 25%; margin-right: 25%">
                         <style>
                             input {
@@ -54,8 +54,10 @@
                     <button class="btn btn-warning" onclick=register() type="submit" style="margin-left: 25%">
                         Submit
                     </button>
-                    <p  style= "margin-top: -3%; margin-left: 55.5%; color: white" >Changed your mind? <a href="index.html" style="font-weight: bold; color: #ffc107">Go back</a></p>
-                    </form>
+                    <p style="margin-top: -3%; margin-left: 55.5%; color: white">Changed your mind? <a href="index.html"
+                                                                                                       style="font-weight: bold; color: #ffc107">Go
+                        back</a></p>
+                </div>
             </div>
         </div>
     </div>
