--- a/frontend/whAddUser.html
+++ b/frontend/whAddUser.html
@@ -66,7 +66,7 @@
                         <input class="form-check-input" type="checkbox" id="checkbox4" style="margin-top: 1%">
                         <label class="form-check-label" for="checkbox4" style="color: whitesmoke; font-weight: bold; -webkit-text-stroke: 1px black; font-size: 130%">Permission to modify warehouses</label>
                     </div>
-                    <button class="btn btn-warning" onclick=addWarehouseToUser() type="submit" style="margin-left: 25%">
+                    <button class="btn btn-warning" onclick=addUserToWarehouse() style="margin-left: 25%" type="submit">
                         Submit
                     </button>
                     <button class="btn btn-warning" onclick="location.href='/warehouseList.html'" style="margin-left: 35.2%;">Go back</button>
