fixPermissions, fix RemoveUser

--- a/frontend/whGetMember.html
+++ b/frontend/whGetMember.html
@@ -35,7 +35,8 @@
                 <!--                <h2 class="mt-5 text-center" style="color:whitesmoke; margin-bottom: 50px">My warehouse list</h2>-->
                 <div class="col-4" style="margin-left: -6%; padding-bottom: 1%">
                     <div class="form-inline my-2 my-lg-0 justify-content-end align-items-end">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Code of warehouse" aria-label="Search">
+                        <input aria-label="Search" class="form-control mr-sm-2" id="whCode"
+                               placeholder="Code of warehouse" type="search">
                         <button class="btn btn-warning" onclick="loadWarehouseMember()">Search</button>
                     </div>
                 </div>
