front end version 0.5

--- a/frontend/storageProductList.html
+++ b/frontend/storageProductList.html
@@ -29,6 +29,7 @@
                 </div>
 
 <!--                <h2 class="mt-5 text-center" style="color:whitesmoke; margin-bottom: 50px">My warehouse list</h2>-->
+                <button class="btn btn-success" onclick="location.href='orderPanel.html'" style="min-width: 100%; font-size: 120%; font-weight: bold"> C H E C K&nbsp;&nbsp;&nbsp;&nbsp;O R D E R S </button>
                 <table class="table table-hover table-light" style>
                     <thead>
                     <tr id="column"></tr>
