--- a/frontend/customerLogin.html
+++ b/frontend/customerLogin.html
@@ -1,66 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
-    <script src="js/oldunusedmain.js" type="text/javascript"></script>
+    <script src="js/customerLogin.js.js" type="text/javascript"></script>
     <script src="js/handeException.js" type="text/javascript"></script>
-    <title>Warehouse manager - register form</title>
+    <title>Warehouse manager - login site</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
 </head>
+
 <body>
 <div class="bg-image"
      style="background-image: url('./img/fullhd.jpg');
             height:100vh;
             background-size: cover">
-    <!-- Page Content -->
     <div class="container h-100">
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-lg-12 text-left">
                 <div id="errorMsg">
                 </div>
-                <!--                <h1 class="mt-5 text-center" style=" color: antiquewhite">Welcome</h1>-->
                 <div>
                     <div class="form-group" style="margin-left: 25%; margin-right: 25%">
                         <style>
                             input {
                                 background-color: white !important;
                                 border-color: grey !important;
-                                /*border-width: thick !important;*/
                             }
                         </style>
-                        <!--                        <label for="username">Nazwa użytkownika</label>-->
                         <input class="form-control" id="username" placeholder="Username" type="username">
                     </div>
                     <div class="form-group" style="margin-left: 25%; margin-right: 25%">
-                        <!--                        <label for="password">Hasło</label>-->
                         <input class="form-control" id="password" placeholder="Password" type="password">
                     </div>
-                    <div class="form-group" style="margin-left: 25%; margin-right: 25%">
-                        <!--                        <label for="password">Hasło</label>-->
-                        <input class="form-control" id="mobile" placeholder="Mobile number" type="mobile">
-                    </div>
-                    <div class="form-group" style="margin-left: 25%; margin-right: 25%">
-                        <!--                        <label for="password">Hasło</label>-->
-                        <input class="form-control" id="email" placeholder="E-mail address" type="email">
-                    </div>
-
-                    <button class="btn btn-warning" onclick=register() type="submit" style="margin-left: 25%">
+                    <button class="btn btn-warning" onclick=login() style="margin-left: 25%">
                         Submit
                     </button>
-                    <p style="margin-top: -3%; margin-left: 55.5%; color: white">Changed your mind? <a href="oldunusedindex.html"
-                                                                                                       style="font-weight: bold; color: #ffc107">Go
-                        back</a></p>
+                    <p style="margin-top: -3%; margin-left: 59%; color: white">Not a member? <a href="register.html"
+                                                                                                style="font-weight: bold; color: #ffc107">Register</a>
+                    </p>
                 </div>
+                <ul id="demo"></ul>
             </div>
         </div>
     </div>
 </div>
+
+
+<script>
+    showError();
+</script>
+<script src="vendor/jquery/jquery.slim.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
+
+
 </html>
