--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,57 +7,33 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
-    <script src="js/main.js" type="text/javascript"></script>
-    <script src="js/handeException.js" type="text/javascript"></script>
-    <title>Warehouse manager - login site</title>
+    <title>Warehouse manager - main page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
 </head>
-
 <body>
 <div class="bg-image"
      style="background-image: url('./img/fullhd.jpg');
             height:100vh;
             background-size: cover">
-    <div class="container h-100">
-        <div class="row h-100 justify-content-center align-items-center">
-            <div class="col-lg-12 text-left">
-                <div id="errorMsg">
-                </div>
-                <div>
-                    <div class="form-group" style="margin-left: 25%; margin-right: 25%">
-                        <style>
-                            input {
-                                background-color: white !important;
-                                border-color: grey !important;
-                            }
-                        </style>
-                        <input class="form-control" id="username" placeholder="Username" type="username">
-                    </div>
-                    <div class="form-group" style="margin-left: 25%; margin-right: 25%">
-                        <input class="form-control" id="password" placeholder="Password" type="password">
-                    </div>
-                    <button class="btn btn-warning" onclick=login() style="margin-left: 25%">
-                        Submit
-                    </button>
-                    <p style="margin-top: -3%; margin-left: 59%; color: white">Not a member? <a href="register.html"
-                                                                                                style="font-weight: bold; color: #ffc107">Register</a>
-                    </p>
-                </div>
-                <ul id="demo"></ul>
+    <div class="container w-100 h-100" style="margin: 0; min-width: 100%; padding: 0; opacity: 50%">
+        <div class="row h-100">
+            <div class="col-6 h-100 " style="padding: 0;">
+                <button class="btn btn-dark" style="min-width: 100%;min-height: 100%; font-size: 300%; font-weight: bolder; font-style: italic" onclick="location.href='workerLogin.html'"> <br>M<br>o<br>n<br>e<br>y<br> <br>m<br>a<br>k<br>e<br>r<br>s<br></button>
+            </div>
+            <div class="col-6 h-100" style="padding: 0">
+                <button class="btn btn-light" style="min-width: 100%;min-height: 100%; font-size: 300%; font-weight: bolder; font-style: italic" onclick="location.href='customerLogin.html'"> <br>M<br>o<br>n<br>e<br>y<br> <br>s<br>p<br>e<br>n<br>d<br>e<br>r<br>s<br></button>
             </div>
         </div>
     </div>
+
 </div>
 
+    <script src="vendor/jquery/jquery.slim.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<script>
-    showError();
-</script>
-<script src="vendor/jquery/jquery.slim.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 
