fixed the fuck up 10.5

--- a/frontend/customerLogin.html
+++ b/frontend/customerLogin.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
-    <script src="js/customerLogin.js.js" type="text/javascript"></script>
+    <script src="js/customerLogin.js" type="text/javascript"></script>
     <script src="js/handeException.js" type="text/javascript"></script>
     <title>Warehouse manager - login site</title>
 
