--- a/frontend/register.html
+++ b/frontend/register.html
@@ -54,7 +54,7 @@
                     <button class="btn btn-warning" onclick=register() type="submit" style="margin-left: 25%">
                         Submit
                     </button>
-                    <p style="margin-top: -3%; margin-left: 55.5%; color: white">Changed your mind? <a href="oldunusedindex.html"
+                    <p style="margin-top: -3%; margin-left: 55.5%; color: white">Changed your mind? <a href="index.html"
                                                                                                        style="font-weight: bold; color: #ffc107">Go
                         back</a></p>
                 </div>
